--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">2022KW_winterproj</string>
+    <string name="app_name">명언뽑기</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="title">title</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
